	+ Custom VRF fields;
	+ Subnets can be now linked to devices;
	+ Import/export enhancements;
	+ Fast user switching for admins to impersonate user;
	+ Opened folders and subnets in tree menu are saved on page reload;
	+ RWA users can now process IP requests;
	+ Added auto-suggest for possible slave subnets;
	+ SSL option for MySQL connections;
	+ Enum custom field support;

	Security Fixes:
	----------------------------
	+ Parametized all MySQL querries;
	+ Fixed plainpass being logged on user update;
	+ Fixed XSS exploit on /error/;

	Translations:
	----------------------------
	+ Added Czech translation;

	Bugfixes:
	----------------------------
	+ Fixed bug with SSL/TLS smtp servers;
	+ Fixed visual subnet display issues on 32bit systems;
	+ Fixed IPv6 split subnets bug;
	+ Fixed /31 ping bug scanning out of boundaries;
	+ Fixed nested broadcast not counted to used percentage;
	+ Fixed invalid redirect after timeout;
	+ Fixed discovery script index overridden;
	+ Fixed dashboard graphs links to subnets;
	+ Fixed Invalid ID on subnet scan of large subnets;

== 1.1.010

	Bugfixes:
	----------------------------
	+ Fixed login fails with LDAP when escape characters are in password;
	+ Fixed login not working with spaces in password for AD login;
	+ Fixed Ivalid action when adding vlans from subnet popup menu;
	+ Fixed custom fields not appearing properly on IP request editing;
	+ Fixed Invalid ID error for IP address details on sorting;
	+ Fixed warnings if no VLAN search results are present;
	+ Fixed test mail not sending;
	+ Fixed unable to login if $phpsessname not defined;
	+ Fixed unable to login after upgrade;

== 1.1

	Enhancements:
	----------------------------
	+ Caching of SQL results to avoid multiple queries;
	+ Reduced number of DB queries;
	+ Added selected mail notifications to admins to be notified on IP/subnet change;
	+ Added new subnetId index to ipaddresses table that significantly improves network loading;